[feat] View star counts on the review page
